[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Ildar Gabdullin <ildar8803@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.88.0"
install = "^1.3.5"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
